<resources>
    <string name="app_name">CKD Express</string>
    <string name="summary_title">Summary:</string>
    <string name="recent_score_title">Recent Score: </string>
    <string name="ckd_stage_title">CKD Stage: </string>
    <string name="base_gfr_score_title">Base GFR Score: </string>
    <string name="loading">Loading...</string>
    <string name="gfrscores_button_title">My GFR Scores</string>
    <string name="sign_out">Sign Out</string>
    <string name="score">Score: </string>
    <string name="entry_placeholder">Entry ##</string>
    <string name="location">Location: </string>
    <string name="date">Date: </string>
    <string name="go">GO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_title">Log In</string>
    <string name="login_admin">Login as Admin</string>
    <string name="add_patient">Add Patient</string>
    <string name="view_patient">View Patient</string>
    <string name="add_patient_title">Add Patient</string>

    <string name="add_patient_first_name">First Name:</string>
    <string name="add_patient_last_name">Last Name:</string>
    <string name="add_patient_dob">Date of Birth: </string>
    <string name="temp_pass">Temporary Password: </string>
    <string name="add">Add</string>

<!--    <string name="line">____________________________________________________________________________________</string>-->

    <string name="add_gfr_score">Add GFR Score: </string>
    <string name="next">Next</string>

    <string name="look_up_patient">Look up a Patient: </string>
    <string name="enter_patient_id">Enter Patient Id: </string>

    <string name="notification_button_title">Notifications</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_message">Notification Message</string>

    <string name="numbers">00.0</string>

    <string name="patient_info">Patient Information</string>
    <string name="score_summary">Score Summary</string>
    <string name="name">Name: </string>
    <string name="last_checkup">Last Checkup: </string>

</resources>
