<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/patient_info_title"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/patient_info"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/patient_name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/patient_name_title"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/patient_dob_title"
        app:layout_constraintEnd_toStartOf="@+id/patient_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/patient_dob_title"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/add_patient_dob"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/patient_ckd_stage_title"
        app:layout_constraintEnd_toStartOf="@+id/patient_dob"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/patient_ckd_stage_title"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/ckd_stage_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/patient_base_gfr_title"
        app:layout_constraintEnd_toStartOf="@+id/patient_ckdstage"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/patient_base_gfr_title"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/base_gfr_score_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/patient_last_checkup_title"
        app:layout_constraintEnd_toStartOf="@+id/patient_base_gfr"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/patient_last_checkup_title"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/last_checkup"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/patient_recent_score_title"
        app:layout_constraintEnd_toStartOf="@+id/patient_last_checkup"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/patient_recent_score_title"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="28dp"
        android:text="@string/recent_score_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/patient_gfr_scores"
        app:layout_constraintEnd_toStartOf="@+id/patient_recent_score"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/patient_gfr_scores"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#FFFFFF"
        android:drawablePadding="10dp"
        android:gravity="left|center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Button"
        app:layout_constraintBottom_toTopOf="@+id/patient_add_gfr_score"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/patient_add_gfr_score"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="32dp"
        android:background="#FFFFFF"
        android:drawablePadding="10dp"
        android:gravity="left|center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/patient_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:text="@string/loading"

        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/patient_dob"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/patient_dob"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:text="@string/loading"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/patient_ckdstage"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/patient_ckdstage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:text="@string/loading"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/patient_base_gfr"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/patient_base_gfr"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:text="@string/loading"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/patient_last_checkup"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/patient_last_checkup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:text="@string/loading"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/patient_recent_score"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/patient_recent_score"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="28dp"
        android:text="@string/loading"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/patient_gfr_scores"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>