<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/admin_welcome_text"
        android:layout_width="370dp"
        android:layout_height="93dp"
        android:layout_marginTop="16dp"
        android:text="@string/welccome_message"
        android:textAlignment="viewStart"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_break_adm"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_welcome_text" />

    <Button
        android:id="@+id/add_patient_btn"
        android:layout_width="316dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:text="@string/add_patient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_break_adm"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/view_patient_btn"
        android:layout_width="316dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:text="@string/view_patient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_patient_btn"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/sign_out_adm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>